修改了包名，之前的包名错了

--- a/NonViewUtils/utilslib/src/main/AndroidManifest.xml
+++ b/NonViewUtils/utilslib/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest package="org.adnroid.share.utils"
+<manifest package="org.android.share.utils"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
