--- a/NonViewUtils/app/src/main/AndroidManifest.xml
+++ b/NonViewUtils/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.adnroid.share.utils.example" >
+    package="org.android.share.utils.example" >
 
     <application
         android:allowBackup="true"
